feat: update MCP runtime schema